[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dev-dependencies]
bytes = "1"
futures = "0.3"
h3 = { path = "../h3" }
h3-quinn = { path = "../h3-quinn" }
http = "0.2"
quinn = { version = "0.10", default-features = false, features = ["runtime-tokio", "tls-rustls", "ring"] }
rcgen = { version = "0.10" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
structopt = "0.3"
tokio = { version = "1.27", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "server"
path = "server.rs"
