[package]
name = "h3-quinn"
version = "0.0.9"
rust-version = "1.70"
authors = ["Jean-Christophe BEGUE <jc.begue@pm.me>"]
edition = "2021"
documentation = "https://docs.rs/h3-quinn"
repository = "https://github.com/hyperium/h3"
readme = "../README.md"
description = "QUIC transport implementation based on Quinn."
keywords = ["http3", "quic", "h3"]
categories = ["network-programming", "web-programming"]
license = "MIT"

[dependencies]
h3 = { version = "0.0.7", path = "../h3" }
bytes = "1"
quinn = { version = "0.11.7", default-features = false, features = [
    "futures-io",
] }
tokio-util = { version = "0.7.9" }
futures = { version = "0.3.28" }
tokio = { version = "1", features = ["io-util"], default-features = false }
h3-datagram = {version = "0.0.1", path = "../h3-datagram", optional = true }
tracing = { version = "0.1.40", optional = true }

[features]
tracing = ["dep:tracing"]
datagram = ["dep:h3-datagram"]
