[package]
name = "h3-webtransport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http = "1"
pin-project-lite = { version = "0.2", default-features = false }
tracing = "0.1.37"
tokio = { version = "1.28", default-features = false }
h3-datagram = { path = "../h3-datagram" }

[dependencies.h3]
version = "0.0.6"
path = "../h3"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
