[package]
name = "h3-webtransport"
version = "0.1.2"
edition = "2021"
documentation = "https://docs.rs/h3-webtransport"
repository = "https://github.com/hyperium/h3"
readme = "readme.md"
description = "webtransport extension for h3"
keywords = ["http3", "quic", "webtransport"]
categories = ["network-programming", "web-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http = "1"
pin-project-lite = { version = "0.2", default-features = false }
tracing = "0.1.37"
tokio = { version = "1.28", default-features = false }
h3-datagram = { version = "0.0.2", path = "../h3-datagram" }

[dependencies.h3]
version = "0.0.8"
path = "../h3"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
