[package]
name = "h3"
version = "0.0.2"
rust-version = "1.57"
authors = [
    "Sean McArthur <sean@seanmonstar.com>",
    "Jean-Christophe BEGUE <jc.begue@pm.me>",
]
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/h3"
repository = "https://github.com/hyperium/h3"
readme = "../README.md"
description = "An async HTTP/3 implementation."
keywords = ["http3", "quic", "h3"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[features]
allow_access_to_core = []

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http = "0.2.9"
tokio = { version = "1", features = ["sync"] }
pin-project = { version = "1.0", default_features = false }
tracing = "0.1.37"
fastrand = "1.9.0"

[dev-dependencies]
assert_matches = "1.5.0"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
proptest = "1"
quinn = { version = "0.9.3", default-features = false, features = [
    "futures-io",
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
quinn-proto = { version = "0.9.2", default-features = false }
rcgen = "0.10"
rustls = "0.20"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
futures = { version = "0.3.27" }
tokio-util = { version = "0.7.7" }
