[package]
name = "h3"
version = "0.0.4"
rust-version = "1.63"
authors = [
    "Sean McArthur <sean@seanmonstar.com>",
    "Jean-Christophe BEGUE <jc.begue@pm.me>",
]
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/h3"
repository = "https://github.com/hyperium/h3"
readme = "../README.md"
description = "An async HTTP/3 implementation."
keywords = ["http3", "quic", "h3"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[features]
i-implement-a-third-party-backend-and-opt-into-breaking-changes = []

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
http = "1"
tokio = { version = "1", features = ["sync"] }
pin-project-lite = { version = "0.2", default_features = false }
tracing = "0.1.40"
fastrand = "2.0.1"

[dev-dependencies]
assert_matches = "1.5.0"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
proptest = "1"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
quinn-proto = { version = "0.10", default-features = false }
rcgen = "0.11.3"
rustls = "0.21"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
futures = { version = "0.3.28" }
tokio-util = { version = "0.7.9" }
