[package]
name = "sec-http3"
version = "0.1.1"
rust-version = "1.63"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
    "Tei Leelo Roberts <ten3roberts@gmail.com>",
]
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/sec-http3"
repository = "https://github.com/security-union/sec-http3"
readme = "../README.md"
description = "An async HTTP/3 implementation that supports web transport."
keywords = ["http3", "quic", "sec-http3", "webtransport"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
    "webtransport",
]

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
http = "0.2.9"
tokio = { version = "1", features = ["sync"] }
pin-project-lite = { version = "0.2", default_features = false }
tracing = "0.1.37"
fastrand = "1.9.0"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
    "futures-io",
] }
quinn-proto = { version = "0.10", default-features = false }
futures = { version = "0.3.27" }
tokio-util = { version = "0.7.7" }

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1"
rcgen = "0.10"
rustls = "0.21"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }


bytes = "1"