[package]
name = "h3-tests"
version = "0.0.1"
authors = [ "Jean-Christophe BEGUE <jc.begue@pm.me>" ]
publish = false
edition = "2018"

[dependencies]
h3 = { path = "../../h3", features = ["test_helpers"]}
h3-quinn = { path = "../../h3-quinn" }
rcgen = { version = "0.7.0" }
bytes = "1"
futures = "0.3"
http = "0.2.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
rustls = "0.20"
assert_matches = "1.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
